--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> Hello World!!!!</h1>
-    <script src="arrays.js"></script>
+    <script src="functions.js"></script>
 </body>
 </html>
